--- a/astro_pages/src/pages/index.astro
+++ b/astro_pages/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import TextBox from '../components/textBox.astro';
+import TextBox from '../components/textbox.astro';
 
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
